# wsr

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  cliff.toml  dist-workspace.toml  release.toml
crates/: README.md
crates/wsr/: Cargo.toml
crates/wsr-cli/: Cargo.toml
crates/wsr-cli/src/: lib.rs
crates/wsr-client/src/: lib.rs
crates/wsr-engine/src/: lib.rs
crates/wsr/src/: lib.rs
docs/: README.md
docs/cli/: README.md
docs/config/: README.md
docs/engine/: README.md
docs/provider/: README.md
docs/sandbox/: README.md
docs/sync/: README.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/provider/: github.rs  mod.rs
