[package]
  name        = "wsr"
  version     = "0.0.1"
  edition     = "2024"
  description = "A local, Wasm-sandboxed CI runner for git hooks"
  license     = "MIT"
  repository  = "https://github.com/carlosferreyra/wsr"

[dependencies]

# The profile that 'dist' will build with
[profile.dist]
  inherits = "release"
  lto      = "thin"
