[package]
  name        = "wsr"
  version     = "0.0.2"
  edition     = "2024"
  description = "A local, Wasm-sandboxed CI runner for git hooks"
  license     = "MIT"
  repository  = "https://github.com/carlosferreyra/wsr"
  authors     = ["Carlos Eduardo Ferreyra <eduferreyraok@gmail.com>"]

[dependencies]
anyhow      = "1"
clap        = { version = "4", features = ["derive"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"

# The profile that 'dist' will build with
[profile.dist]
  inherits = "release"
  lto      = "thin"
